# acx-server

./: .env.example  .gitignore  .rustfmt.toml  Cargo.toml
migrations/: V20250710223000__initial_schema.sql
src/: app_state.rs  db.rs  error.rs  main.rs  mod.rs
src/middleware/: auth.rs  mod.rs
src/models/: account.rs  account_type.rs  category.rs  currency.rs  exchange_rate.rs  journal_entry.rs  mod.rs  tag.rs  tags.rs  tenant.rs  transaction.rs  user.rs
src/models/dto/: account_dto.rs  account_type_dto.rs  category_dto.rs  currency_dto.rs  exchange_rate_dto.rs  journal_entry_dto.rs  mod.rs  tag_dto.rs  tags_dto.rs  tenant_dto.rs  transaction_dto.rs  user_dto.rs
src/routes/: tenant.rs  user.rs
src/services/: account.rs  account_type.rs  budget.rs  budget_line_item.rs  catgegory.rs  currency.rs  exchange_rate.rs  journal_entry.rs  mod.rs  tenant.rs  transaction.rs
src/user/: dto.rs  handlers.rs  mod.rs  models.rs  service.rs
src/utils/: mod.rs
