# Cargo.toml

[package]
name = "forge_backend"
version = "0.1.0"
edition = "2021" # Using the latest Rust edition

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# --- Axum and Core Web Components ---
axum = { version = "0.7.5", features = ["macros"] } # Web framework, "macros" for route attributes
tokio = { version = "1.38.0", features = ["full"] } # Asynchronous runtime, "full" for convenience (consider specific features for prod)
tower-http = { version = "0.5.2", features = ["cors", "trace"] } # Common HTTP utilities, including CORS and tracing middleware

# --- Database (PostgreSQL with SQLx) ---
sqlx = { version = "^0.8.6", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "rust_decimal",
    "json",
    "macros",
    "migrate"
] }
rust_decimal = { version = "1.30.0", features = ["serde-with-float"] } # For accurate decimal arithmetic, used with SQLx's "decimal" feature
serde_json = "1.0.117"           # For JSON serialization/deserialization, especially for JSONB fields

# --- Data Serialization/Deserialization ---
serde = { version = "1.0.203", features = ["derive"] } # Core Serde library with derive macros for Serialize/Deserialize

# --- UUIDs and Date/Time ---
uuid = { version = "1.9.1", features = ["serde", "v4"] } # For UUID generation and parsing, "v4" for random UUIDs
chrono = { version = "0.4.38", features = ["serde"] } # For date and time handling, "serde" for serialization

# --- Configuration & Logging ---
dotenvy = "0.15.7"             # To load environment variables from a .env file
tracing = "0.1.40"             # Core tracing (logging) library
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] } # Subscriber for tracing events

# --- Authentication & Validation ---
argon2 = "0.5.3"               # For secure password hashing (used in user service)
validator = { version = "0.18.1", features = ["derive"] } # For input validation on DTOs, "derive" for macros

# --- Development and Testing Dependencies (only compiled in dev/test profiles) ---
[dev-dependencies]
rstest = "0.18.0" # A testing fixture framework (optional, but useful)